--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -26,6 +26,9 @@ django-resized==1.0.3
 django-widget-tweaks==1.5.0
 executing==2.1.0
 gunicorn==23.0.0
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1
 hyperlink==21.0.0
 icecream==2.1.3
 idna==3.10
@@ -34,6 +37,7 @@ msgpack==1.1.0
 oauthlib==3.2.2
 packaging==24.2
 pillow==11.0.0
+priority==1.3.0
 psycopg2==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
